--- a/pages/my_booking/mybooking-0.html
+++ b/pages/my_booking/mybooking-0.html
@@ -217,7 +217,7 @@
             <img src="./img/โลโก้-2.png" alt="BuddyNest Logo" class="logo">
         </div>
         <div class="auth-buttons">
-            <a href="./index.html">หน้าหลัก</a>
+            <a href="../../index.html">หน้าหลัก</a>
             <a href="./pages/my_booking/mybooking-1.html">การจองของฉัน</a>
             <a href="./pages/sign-in.html"><button>Sign-in</button></a>
             <a href="./pages/registration.html"><button>Register</button></a>
