--- a/pages/my_booking/mybooking-3.html
+++ b/pages/my_booking/mybooking-3.html
@@ -1,10 +1,19 @@
 <!DOCTYPE html>
 <html lang="th">
 <head>
+    <!-- Meta -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="img/โลโก้-2.png" type="image/icon type" sizes="16x16">
+
+    <!-- Logo -->
+    <link rel="icon" href="../../img/โลโก้-2.png" type="image/icon type" sizes="16x16">
+
+    <!-- Title -->
     <title>Buddy Nest - การจองของฉัน</title>
+
+    <!-- CSS -->
+    <link rel="stylesheet" href="../../assets/css/globals.css">
+    <link rel="stylesheet" href="../../assets/css/footer.css">
     <style>
        * {
             margin: 0;
@@ -95,121 +104,87 @@
             border-bottom: 3px solid red;
         }
 
-        footer.main-footer {
-            display: flex;
-            justify-content: space-around;
-            align-items: flex-start;
-            background-color: #FFF7F7;
-            padding: 40px 20px;
-            flex-wrap: wrap;
-        }
-        footer.main-footer div {
-            margin: 10px;
-            text-align: left;
-        }
-        footer.main-footer h3 {
-            margin-bottom: 10px;
-            font-size: 1.2rem;
-        }
-        footer.main-footer p {
-            margin: 5px 0;
-            font-size: 0.9rem;
-        }
-        footer.main-footer a {
+        nav .tab a {
             text-decoration: none;
-            color: #5a5a5a;
-            font-size: 0.9rem;
-        }
-        footer.main-footer .social-media img {
-            width: 30px;
-            height: 30px;
-            margin: 0 5px;
+            color: inherit;
+            display: block;
         }
 
-        footer#bottom-footer {
-          background-color: #FFD38A;
-          text-align: center;
-          padding: 10px 0;
-          font-size: 0.9rem;
-        }
-
-        @media screen and (max-width: 768px) {
-            footer.main-footer {
-              flex-direction: column;
-              align-items: center;
-              text-align: center;
-            }
-            footer.main-footer div {
-              margin-bottom: 20px;
-            }
-            footer.main-footer .social-media img {
-              margin: 5px;
-            }
-        }
     </style>
 </head>
 <body>
+    <!-- Navbar -->
     <header>
         <div class="logo-container">
-            <img src="img/โลโก้-2.png" alt="BuddyNest Logo" class="logo">
+            <img src="../../img/โลโก้-2.png" alt="BuddyNest Logo" class="logo">
         </div>
         <div></div> <!-- ช่องว่างสำหรับจัดให้อยู่ขวา -->
         <div class="auth-buttons">
-            <a href="index.html">หน้าหลัก</a>
-            <a href="pages/my_booking/mybooking-1.html">การจองของฉัน</a>
-            <a href="pages/sign-in.html"><button>Sign-in</button></a>
-            <a href="pages/registration.html"><button>Register</button></a>
+            <a href="../../index.html">หน้าหลัก</a>
+            <a href="../../pages/my_booking/mybooking-1.html">การจองของฉัน</a>
+            <a href="../../pages/sign-in.html"><button>Sign-in</button></a>
+            <a href="../../pages/registration.html"><button>Register</button></a>
         </div>
     </header>
 
     <nav>
-        <div class="tab"><a href="pages/my_booking/mybooking-1.html">กำลังจะมาถึง</a></div>
-        <div class="tab"><a href="pages/my_booking/mybooking-2.html">เสร็จสมบูรณ์</a></div>
-        <div class="tab active"><a href="pages/my_booking/mybooking-3.html">ยกเลิก</a></div>
+        <div class="tab"><a href="../../pages/my_booking/mybooking-1.html">กำลังจะมาถึง</a></div>
+        <div class="tab"><a href="../../pages/my_booking/mybooking-2.html">เสร็จสมบูรณ์</a></div>
+        <div class="tab active"><a href="../../pages/my_booking/mybooking-3.html">ยกเลิก</a></div>
     </nav>
 
     <main>
-        <img src="img/รูป1.png" alt="icon">
+        <img src="../../img/รูป1.png" alt="icon">
         <h1>ยังไม่มีการจองที่ถูกยกเลิก</h1>
     </main>
     <br><br><br><br><br><br><br><br><br><br><br>
     
+    
     <footer class="main-footer">
-        <div class="team">
-            <h3>Team</h3>
-            <p>Hataichanok Tanaskul</p>
-            <p>Amaraporn Onkoksung</p>
-            <p>Achiraya Kewwanya</p>
-            <p>Aman Alikae</p>
-        </div>
-        <div class="contact">
-            <h3>Contact Us</h3>
-            <p>Email: buddy.nest@up.ac.th</p>
-            <p>Phone Number: (+66)12-3456789</p>
-            <p>Address: 19 ตำบลเมือง อำเภอเมืองพะเยา พะเยา 56000</p>
-        </div>
-        <div class="social-media">
-            <h3>Follow Us</h3>
-            <a href="https://www.facebook.com/" target="_blank" aria-label="Facebook">
-                <img src="img/fb.png" alt="Facebook Logo">
-            </a>
-            <a href="https://www.instagram.com/" target="_blank" aria-label="Instagram">
-                <img src="img/ig.png" alt="Instagram Logo">
-            </a>
-            <a href="https://twitter.com/" target="_blank" aria-label="Twitter">
-                <img src="img/x.png" alt="Twitter Logo">
-            </a>
-        </div>
-        <div class="about">
-            <h3>About Us</h3>
-            <p><a href="index.html">หน้าหลัก</a></p>
-            <p><a href="pages/grab_pet.html">บริการรับส่งสัตว์เลี้ยง</a></p>
-            <p><a href="pages/pet_care.html Care.html">บริการกรูมมิ่ง</a></p>
-            <p><a href="pages/my_booking/mybooking-1.html">การจองของฉัน</a></p>
-        </div>
+        <article class="footer-container">
+            <!-- Team -->
+            <section class="team">
+                <h3>Team</h3>
+                <p>Hataichanok Tanaskul</p>
+                <p>Amaraporn Onkoksung</p>
+                <p>Achiraya Kewangnya</p>
+                <p>Aman Alikae</p>
+            </section>
+
+            <!-- Contact -->
+            <section class="contact">
+                <h3>Contact Us</h3>
+                <p>Email: buddy.nest@up.ac.th</p>
+                <p>Phone Number: (+66)12-3456789</p>
+                <p>Address: 19 ตำบลเมือง อำเภอเมืองพะเยา พะเยา 56000</p>
+            </section>
+
+            <!-- Social media -->
+            <section class="social-media">
+                <h3>Follow Us</h3>
+                <a href="https://www.facebook.com/" target="_blank" aria-label="Facebook">
+                    <img src="../../img/fb.png" alt="Facebook Logo">
+                </a>
+                <a href="https://www.instagram.com/" target="_blank" aria-label="Instagram">
+                    <img src="../../img/ig.png" alt="Instagram Logo">
+                </a>
+                <a href="https://twitter.com/" target="_blank" aria-label="Twitter">
+                    <img src="../../img/x.png" alt="Twitter Logo">
+                </a>
+            </section>
+
+            <!-- About -->
+            <section class="about">
+                <h3>About Us</h3>
+                <p><a href="../../index.html">หน้าหลัก</a></p>
+                <p><a href="../../pages/grab_pet.html">บริการรับส่งสัตว์เลี้ยง</a></p>
+                <p><a href="../../pages/pet_care.html">บริการกรูมมิ่ง</a></p>
+                <p><a href="../../pages/my_booking/mybooking-1.html">การจองของฉัน</a></p>
+            </section>
+        </article>
     </footer>
 
-    <footer id="bottom-footer">
+    <footer class="bottom-footer">
         <p>© 2025 Buddy Nest. All Rights Reserved.</p>
     </footer>
 </body>
