--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
 
     <style>
         .search-section {
-            background-color: #d9f6f8;
-            border-top: 1px solid #000000;
-            border-bottom: 1px solid #000000;
+            background-color: #D9FBFC;
+            border-top: 1px solid #D9FBFC;
+            border-bottom: 1px solid #D9FBFC;
             padding: 1rem 0;
 
             .search-container {
