--- a/pages/sign-in.html
+++ b/pages/sign-in.html
@@ -179,7 +179,7 @@
             <form class="sign-in-form" id="signinForm">
                 <div id="error-message" class="error-message"></div>
                 <div class="input-field">
-                    <img src="../../img/growth.png" alt="Email Icon">
+                    <img src="../../img/user.png" alt="Email Icon">
                     <input type="email" id="email" placeholder="Enter your email address" required>
                 </div>
                 <div class="input-field">
