--- a/pages/my_booking/mybooking-0.html
+++ b/pages/my_booking/mybooking-0.html
@@ -25,7 +25,7 @@
 
         body {
             font-family: Arial, sans-serif;
-            background-color: #EA73D3;
+            background-color: #FEFAF2;
             color: #210000;
         }
 
